--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ theme = "archie"
 [params]
 	mode="toggle" # color-mode → light,dark,toggle or auto
 	subtitle = "A mostly non-tech blog about travel, food, fitness and reviews"
+  favicon = "favicon.ico"
 
 # Social Tags
 
